# Hey_write

./: .gitignore  Readme.md  docker-compose.yml  render.yaml  run_local.sh
.claude/: settings.json  settings.local.json
.github/workflows/: deploy-backend.yml
.husky/: pre-commit
chatbox-backend/: .dockerignore  dockerfile  main.py  pyproject.toml  requirements.txt  template_store.py
chatbox-backend/agent/: __init__.py  evaluator.py  graph.py  nodes.py  schemas.py  state.py  store.py
chatbox-backend/chroma_db/: chroma.sqlite3
chatbox-backend/chroma_db_backup_20260217_005735/: chroma.sqlite3
chatbox-backend/chroma_setup/: chroma_db.py
chatbox-backend/langchain_runner/: build_vectorstore.py  chains.py  qa.py  rag_chain.py  summarize.py  vectorstore.py
chatbox-backend/templates/: contract_risk_review_template.embedding.json  meeting_invitation.embedding.json  meeting_summary.embedding.json  project_weekly_report.embedding.json
chatbox-backend/tests/evals/: run_writing_agent_eval.py  writing_agent_cases.jsonl
chatbox-frontend/: eslint.config.mjs  package-lock.json  package.json
chatbox-frontend/public/: index.html
chatbox-frontend/src/: App-style.ts  App.test.js  App.tsx  indexStyle.ts
